# pypemesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/cantilever_thermal_expansion/: expected.json  model.json  tolerance.yaml
benchmarks/fixed_pressure_b31_3/: expected.json  model.json  tolerance.yaml
benchmarks/l_bend_thermal/: expected.json  model.json
benchmarks/peng_ch5_u_loop/: expected.json  model.json
docs/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  COMMERCIAL_ROADMAP.md  MILESTONES.md  REQUIREMENTS.md  SOFTWARE_LANDSCAPE.md  TECH_DECISIONS.md  UX_PRINCIPLES.md  VALIDATION_PLAN.md  index.md
docs/theory/: BEAM_THEORY.md  CODE_B31_3.md  DYNAMIC_ANALYSIS.md  PIPE_MECHANICS.md  README.md  SIF_MARKL.md  SOLVER_NUMERICS.md  STRESS_CATEGORIES.md
pypemesh-core/: README.md  demo_reactions.csv  pyproject.toml
pypemesh-core/src/pypemesh_core/: __init__.py  cli.py
pypemesh-core/src/pypemesh_core/codes/: __init__.py  api_617.py  b31_1.py  b31_12.py  b31_3.py  b31_4.py  b31_5.py  csa_z662.py  dnv_f101.py  kta_3201.py  nuclear_section_iii.py
pypemesh-core/src/pypemesh_core/fittings/: __init__.py
pypemesh-core/src/pypemesh_core/io/: __init__.py  csv_export.py  isometric.py
pypemesh-core/src/pypemesh_core/materials/: __init__.py  library.py
pypemesh-core/src/pypemesh_core/solver/: __init__.py  assembly.py  dynamic.py  model.py  results.py  time_history.py
pypemesh-core/src/pypemesh_core/solver/elements/: beam.py  elbow.py  rigid.py
pypemesh-core/src/pypemesh_core/validation/: harness.py
pypemesh-core/tests/: _helpers.py  test_markl_verification.py  test_smoke.py  test_validation_harness.py
pypemesh-core/tests/analytical/: test_cantilever.py  test_geometric.py  test_modal.py  test_response_spectrum.py  test_thermal.py  test_time_history.py
pypemesh-core/tests/codes/: test_b31_1.py  test_b31_12.py  test_b31_3.py  test_b31_4.py  test_b31_5.py  test_b31_8.py  test_b31_9.py  test_csa_z662.py  test_dnv_f101.py  test_en_13480.py  test_more_codes.py  test_nuclear_class_1.py  test_nuclear_iii.py  test_nuclear_variants.py
pypemesh-core/tests/unit/: test_beam_stiffness.py  test_caesar_ii.py  test_catalogs.py  test_cli.py  test_csv_isometric.py  test_elbow.py  test_fatigue.py  test_friction.py  test_io.py  test_materials_library.py  test_nonlinear.py  test_pcf.py  test_report_pdf.py  test_sections.py  test_sif.py  test_spring_rigid_tee.py  test_support_optimizer.py  test_wrc.py
pypemesh-desktop/: .gitignore  README.md  main.js  package.json  preload.js
pypemesh-web/backend/: Dockerfile  README.md  pyproject.toml
pypemesh-web/backend/app/: main.py
pypemesh-web/backend/tests/: test_api.py
pypemesh-web/frontend/: README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  tsconfig.node.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
pypemesh-web/frontend/api/: solve.py
pypemesh-web/frontend/api/pypemesh_core/: cli.py
pypemesh-web/frontend/api/pypemesh_core/codes/: b31_3.py  b31_8.py  b31_9.py  base.py  bs_806.py  en_13480.py  iso_15649.py  jsme_ppc.py  norsok_l002.py  nuclear_class_1.py  sif.py
pypemesh-web/frontend/api/pypemesh_core/fatigue/: __init__.py  markl.py
pypemesh-web/frontend/api/pypemesh_core/fea/: __init__.py  wrc.py
pypemesh-web/frontend/api/pypemesh_core/fittings/: b16_5.py  b16_9.py  b36_10.py
pypemesh-web/frontend/api/pypemesh_core/io/: caesar_ii.py  pcf.py  project.py  report_pdf.py
pypemesh-web/frontend/api/pypemesh_core/materials/: library.py  library_ext.py
pypemesh-web/frontend/api/pypemesh_core/optimizer/: __init__.py  (+1 more)
pypemesh-web/frontend/src/: App.js  App.tsx  Modeler.tsx  ShortcutHelp.tsx  Sidebar.tsx  Spreadsheet.tsx  api.ts  sample.ts  styles.css  types.ts  useAutosave.ts  useKeyboard.ts  useUndo.ts
pypemesh-web/frontend/src/components/: CADImport.tsx  CommandLine.tsx  ContextMenu.tsx  DesignViewport.tsx  FeatureTree.tsx  ImportExportBar.tsx  LeftPanel.tsx  LibraryBrowser.tsx  LoadCaseEditor.tsx  NumericInput.tsx  PropertyEditor.tsx  StatusBar.tsx  Toolbar.tsx
pypemesh-web/frontend/src/data/: catalog.ts
pypemesh-web/frontend/src/sketch/: constraints.ts  fillet.ts  tests.ts
pypemesh-web/frontend/src/solid/: csg.ts  stepImport.ts  sweep.ts
pypemesh-web/frontend/src/store/: annotations.ts  projectStore.ts
(+13 files in other folders)
