[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypemesh-core"
version = "0.1.0a0"
description = "Open-source pipe stress analysis engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "pypemesh contributors" }]
keywords = ["pipe", "stress", "fea", "asme", "b31.3", "engineering"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "reportlab>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.98",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
pypemesh = "pypemesh_core.cli:main"

[project.entry-points."pypemesh.codes"]
b31_3 = "pypemesh_core.codes.b31_3:B31_3"
b31_1 = "pypemesh_core.codes.b31_1:B31_1"
b31_4 = "pypemesh_core.codes.b31_4:B31_4"
b31_5 = "pypemesh_core.codes.b31_5:B31_5"
b31_8 = "pypemesh_core.codes.b31_8:B31_8"
b31_9 = "pypemesh_core.codes.b31_9:B31_9"
b31_12 = "pypemesh_core.codes.b31_12:B31_12"
csa_z662 = "pypemesh_core.codes.csa_z662:CSA_Z662"
en_13480 = "pypemesh_core.codes.en_13480:EN_13480"

[tool.hatch.build.targets.wheel]
packages = ["src/pypemesh_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "PL"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pypemesh_core --cov-report=term-missing"
