[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypemesh-backend"
version = "0.1.0a0"
description = "pypemesh web backend — FastAPI wraps pypemesh-core solver"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "../../LICENSE" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "rq>=1.16",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "pypemesh-core @ file:///./../../pypemesh-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
